feat: create InstanceV2 based on minecraft profile